# generals-io-ai

./: ARCHITECTURE.md  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.extend.yml  docker-compose.yml
.github/workflows/: format-and-check.yaml
ai/bhintze-aim-for-cities/: Cargo.toml
ai/bhintze-aim-for-cities/src/: main.rs
ai/ijc-testing/: Cargo.toml
ai/ijc-testing/src/: main.rs
ai/jroylance/: Cargo.toml
ai/jroylance-closest-conquerable-space/: Cargo.toml
ai/jroylance-closest-conquerable-space/src/: main.rs
ai/jroylance/src/: main.rs
ai/random/: Cargo.toml
ai/random/src/: main.rs
data/: index.html  index.js  styles.css
game/: Cargo.toml
game/data/: index.js  styles.css
game/src/: ai.rs  game_state.rs  main.rs
model/: Cargo.toml
model/src/: lib.rs
src/: ai.rs  game_state.rs  main.rs
