[workspace]

members = [
    "game",
    "model",
    "ai/*",
]

[workspace.dependencies]
axum = "0.7.5"
rand = "0.8.5"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }