[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }

axum.workspace = true
axum.features = ["ws"]
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
