[package]
name = "jroylance-closest-conquerable-space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = {path = "../../model"}

axum.workspace = true
axum.features = ["json"]
rand.workspace = true
tokio.workspace = true
itertools.workspace = true